2008-08-27  Philip Withnall  <philip@tecnocode.co.uk>

	** Fix for bug #534762

	* evolution-mail.schemas.in:
	* mail-config.glade: Change "addressbook" to "address book" in
	translatable strings.

2008-08-27  Sankar P  <psankar@novell.com>

License Changes

	* e-searching-tokenizer.h:
	* em-account-prefs.h:
	* em-composer-utils.h:
	* em-event.h:
	* em-filter-context.h:
	* em-filter-editor.h:
	* em-filter-folder-element.c:
	* em-filter-folder-element.h:
	* em-filter-rule.h:
	* em-folder-browser.h:
	* em-folder-properties.h:
	* em-folder-selection-button.h:
	* em-folder-selection.c:
	* em-folder-selection.h:
	* em-folder-selector.c:
	* em-folder-selector.h:
	* em-folder-tree.h:
	* em-format-hook.h:
	* em-format-html-display.h:
	* em-format-html-print.c:
	* em-format-html.h:
	* em-format-quote.c:
	* em-format.h:
	* em-html-stream.c:
	* em-html-stream.h:
	* em-inline-filter.h:
	* em-junk-hook.h:
	* em-menu.h:
	* em-message-browser.h:
	* em-popup.h:
	* em-search-context.c:
	* em-search-context.h:
	* em-stripsig-filter.c:
	* em-subscribe-editor.h:
	* em-sync-stream.h:
	* em-vfolder-context.c:
	* em-vfolder-context.h:
	* em-vfolder-editor.c:
	* importers/mail-importer.h:
	* mail-config-factory.c:
	* mail-signature-editor.h:
	* mail-types.h:
	* message-tag-editor.c:
	* message-tag-editor.h:
	* message-tag-followup.c:
	* message-tag-followup.h:

2008-08-20  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #546926

	* mail-session.c (mail_session_shutdown):
	New function simply calls camel_shutdown().

	* mail-component.c (impl_finalize):
	Call mail_session_shutdown().

2008-08-18  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #508732

	* mail-component.c (impl_createView):
	Add a "select_item" argument for crash recovery, which we forward
	to EMFolderBrowser as a "suppress_message_selection" flag.

	* em-folder-browser.c (emfb_set_folder):
	Suppress automatic message selection if we are recovering from a
	crash.
